@@ -107,8 +107,6 @@ public:
     static constexpr Seconds workerTerminationTimeout { 10_s };
     static constexpr Seconds syncWorkerTerminationTimeout { 100_ms }; // Only used by layout tests.
 
-    WEBCORE_EXPORT void whenTerminationRequestsAreDone(CompletionHandler<void()>&&);
-
 private:
     SWContextManager() = default;
 
@@ -130,7 +128,6 @@ private:
         Timer m_timeoutTimer;
     };
     HashMap<ServiceWorkerIdentifier, std::unique_ptr<ServiceWorkerTerminationRequest>> m_pendingServiceWorkerTerminationRequests;
-    Vector<CompletionHandler<void()>> m_whenTerminationRequestsAreDoneHandlers;
 };
 
 } // namespace WebCore
